--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Lists</h1>
     <br>
+    <ul>
+        <li>
     <h2>Website Components</h2>
     <ol>
         <li>
@@ -44,5 +46,10 @@
             </ul>
         </li>
     </ol>
+    </li>
+    <li>
+        <h1>End of Components</h1>
+    </li>
+    </ul>
 </body>
 </html>
