--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <h1>Lists</h1>
-    <br>
     <ul>
         <li>
     <h2>Website Components</h2>
@@ -49,6 +48,38 @@
     </li>
     <li>
         <h1>End of Components</h1>
+    </li>
+    <li>
+        <h1>More Practice</h1>
+        <ol type="1" start="4">
+            <li>Item</li>
+            <li>Item</li>
+            <li>Item
+                <ol type="A">
+                    <li>Item</li>
+                    <li>Item</li>
+                    <li>Item
+                        <ol type="a">
+                            <li>Item</li>
+                            <li>Item</li>
+                            <li>Item
+                                <ol type="I">
+                                    <li>Item</li>
+                                    <li>Item</li>
+                                    <li>Item
+                                        <ol type="i">
+                                            <li>Item</li>
+                                            <li>Item</li>
+                                            <li>Item</li>
+                                        </ol>
+                                    </li>
+                                </ol>
+                            </li>
+                        </ol>
+                    </li>
+                </ol>
+            </li>
+        </ol>
     </li>
     </ul>
 </body>
